--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,12 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Secret Blog App</title>
+    <title>Blog App</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>✍</text></svg>"
-    />
   </head>
   <body>
     <div id="root"></div>
